--- a/public/index.html
+++ b/public/index.html
@@ -5,46 +5,46 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,viewport-fit=cover"/>
 <title>Triggui — Abre un libro físico. Aquí y ahora.</title>
 <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500;800&display=swap" rel="stylesheet"/>
-
 <style>
-/* RESET --------------------------------------------------------- */
 *,*:before,*:after{margin:0;padding:0;box-sizing:border-box}
-html,body{height:100%;font-family:'Archivo',sans-serif;background:#0d0e1a;color:#fff;overflow-y:auto;-webkit-overflow-scrolling:touch}
+html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:#fff;
+          overflow-y:auto;-webkit-overflow-scrolling:touch}
 
-/* INTRO --------------------------------------------------------- */
-.intro{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);padding:1.8rem 2.8rem;background:#191e32;border-radius:24px;box-shadow:0 0 16px rgba(48,255,228,.32);font-family:'Poppins';font-size:1rem;z-index:120;animation:introHide 2s 1.4s forwards}
+.intro{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);
+       padding:1.8rem 2.8rem;background:#191e32;border-radius:24px;z-index:120;
+       font-family:'Poppins';font-size:1rem;box-shadow:0 0 16px rgba(48,255,228,.32);
+       animation:introHide 2s 1.4s forwards}
 .intro .hl{color:#30ffe4;font-weight:800}
 @keyframes introHide{to{opacity:0;visibility:hidden;transform:translate(-50%,-78%)}}
 
-/* GRID ---------------------------------------------------------- */
 .grid{position:absolute;inset:5vh 1.5vw;display:grid;gap:1vw}
 @media(orientation:landscape){.grid{grid-template-columns:repeat(4,1fr)}}
 @media(orientation:portrait){.grid{grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(2,1fr)}}
 
-/* BLOCK --------------------------------------------------------- */
-.block{position:relative;display:flex;align-items:center;justify-content:center;padding:1rem;border-radius:22px;font-weight:700;cursor:pointer;background-size:320% 320%;transition:background-position 4s;overflow:hidden}
+.block{position:relative;display:flex;align-items:center;justify-content:center;
+       padding:1rem;border-radius:22px;font-weight:700;cursor:pointer;
+       background-size:320% 320%;transition:background-position 4s;overflow:hidden}
 .block:hover{background-position:100% 100%}
-.block::before{content:"";position:absolute;inset:0;border-radius:inherit;background:linear-gradient(180deg,rgba(255,255,255,.18),transparent 65%);mix-blend-mode:overlay}
+.block::before{content:"";position:absolute;inset:0;border-radius:inherit;
+               background:linear-gradient(180deg,rgba(255,255,255,.18),transparent 65%);
+               mix-blend-mode:overlay}
 
-/* LABEL / FRASE ------------------------------------------------- */
-.label{z-index:2;text-align:center;line-height:1.25}
-.frase{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;padding:1rem;text-align:center;line-height:1.25;z-index:2;opacity:0;transition:opacity .25s}
+.label{z-index:2;text-align:center}
+.frase{position:absolute;inset:0;display:flex;align-items:center;justify-content:center;
+       padding:1rem;text-align:center;opacity:0;transition:opacity .25s}
 .block.show .label{opacity:0}
 .block.show .frase{opacity:1}
 
-/* PORTADA ------------------------------------------------------- */
-.portada{position:absolute;inset:0;display:none;align-items:center;justify-content:center;padding:1rem;text-align:center}
+.portada{position:absolute;inset:0;display:none;align-items:center;justify-content:center;padding:1rem}
 .portada img{max-width:88%;max-height:88%;border-radius:18px;box-shadow:0 12px 32px rgba(0,0,0,.55)}
-.port-text h2{font-size:clamp(2rem,5vw,3.3rem);font-weight:800;line-height:1.1}
+.port-text h2{font-size:clamp(2rem,5vw,3.2rem);font-weight:800;line-height:1.1}
 .port-text p{font-size:clamp(.9rem,2vw,1.25rem);font-weight:600;opacity:.9}
 
-/* CTA ----------------------------------------------------------- */
 .cta{position:fixed;bottom:3vh;left:50%;transform:translateX(-50%);display:none;gap:1rem}
 .cta button{border:none;padding:.6rem 1.2rem;border-radius:999px;font-size:.9rem;font-weight:700;cursor:pointer}
 #otro{background:#ffd1d1;color:#000}
 #fisico{background:#d1ffd9;color:#000}
 
-/* CELEBRACIÓN --------------------------------------------------- */
 .cele{position:fixed;inset:0;background:rgba(0,0,0,.88);display:none;align-items:center;justify-content:center;z-index:110}
 .cele-msg{font-family:'Poppins';font-size:2rem;text-align:center;background:rgba(255,255,255,.05);padding:2rem 3rem;border-radius:20px}
 .num{color:#30ffe4;font-weight:900;font-size:2.8rem}
@@ -63,29 +63,19 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0d0e1a;color:
 <div class="cele" id="cele"><div class="cele-msg" id="celeMsg">✨ <span class="num">...</span><br>libros físicos abiertos</div></div>
 
 <script>
-/* ELEMENTOS ----------------------------------------------------- */
-const grid      = document.getElementById("grid");
-const cta       = document.getElementById("cta");
-const btnOtro   = document.getElementById("otro");
-const btnLibro  = document.getElementById("fisico");
-const cele      = document.getElementById("cele");
-const celeMsg   = document.getElementById("celeMsg");
+const grid=document.getElementById("grid"),cta=document.getElementById("cta"),
+      btnOtro=document.getElementById("otro"),btnLibro=document.getElementById("fisico"),
+      cele=document.getElementById("cele"),celeMsg=document.getElementById("celeMsg");
 
-/* VARS ---------------------------------------------------------- */
-let libro=null;
-let portIdx=Math.floor(Math.random()*4);  // bloque aleatorio para la portada
-let revealed=false;
-const emojis=["🚶","❤️","🧠","✨"];         // 4 emojis genéricos
-const defaultWord="Abrir";                // para el cuarto bloque si faltan palabras
+let libro=null;const portIdx=Math.floor(Math.random()*4);let revealed=false;
 const isURL=s=>/^https?:\/\//i.test(s||"");
+const emojis=["🚶","❤️","🧠","✨"];
 
-/* gradientes ---------------------------------------------------- */
-const grad=(i)=>`linear-gradient(135deg,${libro.colores[i]},${libro.colores[(i+1)%4]})`;
+const grad=i=>`linear-gradient(135deg,${libro.colores[i]},${libro.colores[(i+1)%4]})`;
 
-/* PORTADA ------------------------------------------------------- */
 function buildPort(){
   const d=document.createElement("div");d.className="portada";
-  if(isURL(libro.portada)){const img=new Image();img.src=libro.portada;d.append(img);}
+  if(isURL(libro.portada)){d.append(Object.assign(new Image(),{src:libro.portada}));}
   else{
     const box=document.createElement("div");box.className="port-text";
     const [t,...rest]=libro.portada.split("\\n");
@@ -94,76 +84,47 @@ function buildPort(){
   return d;
 }
 
-/* RENDER -------------------------------------------------------- */
 function render(){
   grid.innerHTML="";
   for(let i=0;i<4;i++){
-    const card=document.createElement("div");
-    card.className="block";card.dataset.i=i;card.style.background=grad(i);
-
-    const label=document.createElement("div");label.className="label";
-    const frase=document.createElement("div");frase.className="frase";
-    const word=i<libro.palabras.length?libro.palabras[i]:defaultWord;
-
-    label.textContent=`${emojis[i]} ${word}`;
-    label.style.color=libro.textColors[i];
-
-    if(i<libro.frases.length){
-      frase.textContent=libro.frases[i];
-      frase.style.color=libro.textColors[i];
-    }
-
+    const card=document.createElement("div");card.className="block";card.dataset.i=i;card.style.background=grad(i);
+    const label=document.createElement("div");label.className="label";label.style.color=libro.textColors[i];label.textContent=`${emojis[i]} ${libro.palabras[i]}`;
+    const frase=document.createElement("div");frase.className="frase";frase.style.color=libro.textColors[i];frase.textContent=libro.frases[i];
     const port=buildPort();
-    if(i===portIdx) card.append(port);      // portada oculta de inicio
-    card.append(label,frase);
-
-    card.onclick=()=>handle(card,i,port);
+    if(i===portIdx) card.append(port);
+    card.append(label,frase);card.onclick=()=>click(card,i,port);
     grid.append(card);
   }
 }
 
-/* CLICK --------------------------------------------------------- */
-function handle(card,i,port){
-  if(revealed && i!==portIdx){location.reload();return;}
-
-  if(i===portIdx && !revealed){
+function click(card,i,port){
+  if(revealed&&i!==portIdx){location.reload();return;}
+  if(i===portIdx&&!revealed){
     port.style.display="flex";
     [...grid.children].forEach((c,j)=>{if(j!==portIdx)c.classList.add("show");});
     cta.style.display="flex";revealed=true;
-  }else if(i!==portIdx && !revealed){
+  }else if(i!==portIdx&&!revealed){
     card.classList.toggle("show");
   }
 }
 
-/* BOTONES ------------------------------------------------------- */
 btnOtro.onclick=()=>location.reload();
 btnLibro.onclick=async()=>{
   btnLibro.disabled=true;cele.style.display="flex";
   celeMsg.innerHTML='✨ <span class="num">...</span><br>libros físicos abiertos';
-  try{
-    const r=await fetch("https://triggui-api.vercel.app/api/increment");
-    const d=await r.json();
-    celeMsg.innerHTML=`✨ <span class="num">${d.total.toLocaleString('es-MX')}</span><br>libros físicos abiertos`;
-  }catch{celeMsg.textContent="📚 Error al contar libros";}
+  try{const r=await fetch("https://triggui-api.vercel.app/api/increment");const d=await r.json();
+      celeMsg.innerHTML=`✨ <span class="num">${d.total.toLocaleString('es-MX')}</span><br>libros físicos abiertos`; }
+  catch{celeMsg.textContent="📚 Error al contar libros";}
   setTimeout(()=>{cele.style.display="none";cta.style.display="flex";},2300);
 };
 
-/* INIT ---------------------------------------------------------- */
 (async()=>{
   try{
     const r=await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json?ts="+Date.now());
     const data=await r.json();
-    if(!data.libros||!data.libros.length)throw new Error("contenido.json vacío");
     libro=data.libros[Math.floor(Math.random()*data.libros.length)];
-
-    /* safety: mínimo 4 colores/textColors */
-    while(libro.colores.length<4)libro.colores.push("#ffffff");
-    while(libro.textColors.length<4)libro.textColors.push("#000000");
-
     render();
-  }catch(e){
-    console.error(e);alert("No se pudo cargar Triggui. Intenta más tarde.");
-  }
+  }catch(e){alert("No se pudo cargar Triggui.");console.error(e);}
 })();
 </script>
 </body>
