--- a/public/index.html
+++ b/public/index.html
@@ -8,19 +8,22 @@
 <style>
 *,*:before,*:after{margin:0;padding:0;box-sizing:border-box}
 html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:#fff;
-          overflow-y:auto;-webkit-overflow-scrolling:touch}
+          overflow-y:auto;-webkit-overflow-scrolling:touch;user-select:none}
 
+/* ───────── Intro───────── */
 .intro{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);
        padding:1.8rem 2.8rem;background:#191e32;border-radius:24px;z-index:120;
        font-family:'Poppins';font-size:1rem;box-shadow:0 0 16px rgba(48,255,228,.32);
-       animation:introHide 2s 1.4s forwards}
+       animation:introHide 2.2s 1s forwards}
 .intro .hl{color:#30ffe4;font-weight:800}
-@keyframes introHide{to{opacity:0;visibility:hidden;transform:translate(-50%,-78%)}}
+@keyframes introHide{to{opacity:0;visibility:hidden;transform:translate(-50%,-80%)}}
 
+/* ───────── Grid───────── */
 .grid{position:absolute;inset:5vh 1.5vw;display:grid;gap:1vw}
 @media(orientation:landscape){.grid{grid-template-columns:repeat(4,1fr)}}
 @media(orientation:portrait){.grid{grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(2,1fr)}}
 
+/* ───────── Blocks───────── */
 .block{position:relative;display:flex;align-items:center;justify-content:center;
        padding:1rem;border-radius:22px;font-weight:700;cursor:pointer;
        background-size:320% 320%;transition:background-position 4s;overflow:hidden}
@@ -35,18 +38,26 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 .block.show .label{opacity:0}
 .block.show .frase{opacity:1}
 
-.portada{position:absolute;inset:0;display:none;align-items:center;justify-content:center;padding:1rem}
-.portada img{max-width:88%;max-height:88%;border-radius:18px;box-shadow:0 12px 32px rgba(0,0,0,.55)}
-.port-text h2{font-size:clamp(2rem,5vw,3.2rem);font-weight:800;line-height:1.1}
-.port-text p{font-size:clamp(.9rem,2vw,1.25rem);font-weight:600;opacity:.9}
+/* ───────── Portada───────── */
+.portada{position:absolute;inset:0;display:none;align-items:center;justify-content:center;
+         flex-direction:column;padding:1rem;gap:.8rem;text-align:center}
+.portada img{max-width:88%;max-height:88%;border-radius:18px;
+             box-shadow:0 12px 32px rgba(0,0,0,.55)}
+.port-text h2{font-size:clamp(1.8rem,4.8vw,2.8rem);font-weight:800;line-height:1.15}
+.port-text p{font-size:clamp(.8rem,2.2vw,1.1rem);font-weight:600;opacity:.92;margin-top:.25rem}
 
-.cta{position:fixed;bottom:3vh;left:50%;transform:translateX(-50%);display:none;gap:1rem}
+/* ───────── CTA───────── */
+.cta{position:fixed;bottom:3vh;left:50%;transform:translateX(-50%);
+     display:none;gap:1rem;z-index:100}
 .cta button{border:none;padding:.6rem 1.2rem;border-radius:999px;font-size:.9rem;font-weight:700;cursor:pointer}
 #otro{background:#ffd1d1;color:#000}
 #fisico{background:#d1ffd9;color:#000}
 
-.cele{position:fixed;inset:0;background:rgba(0,0,0,.88);display:none;align-items:center;justify-content:center;z-index:110}
-.cele-msg{font-family:'Poppins';font-size:2rem;text-align:center;background:rgba(255,255,255,.05);padding:2rem 3rem;border-radius:20px}
+/* ───────── Celebración───────── */
+.cele{position:fixed;inset:0;background:rgba(0,0,0,.88);display:none;
+      align-items:center;justify-content:center;z-index:110}
+.cele-msg{font-family:'Poppins';font-size:2rem;text-align:center;
+          background:rgba(255,255,255,.05);padding:2rem 3rem;border-radius:20px}
 .num{color:#30ffe4;font-weight:900;font-size:2.8rem}
 </style>
 </head>
@@ -69,37 +80,42 @@ const grid=document.getElementById("grid"),cta=document.getElementById("cta"),
 
 let libro=null;const portIdx=Math.floor(Math.random()*4);let revealed=false;
 const isURL=s=>/^https?:\/\//i.test(s||"");
-const emojis=["🚶","❤️","🧠","✨"];
+const emojis=["🌊","🛡️","🧠","✨","📘","🔮","❤️","🪞"]; // más variedad si crece a futuro
 
 const grad=i=>`linear-gradient(135deg,${libro.colores[i]},${libro.colores[(i+1)%4]})`;
 
+/* ── Crear portada (imagen o título/autor) ──*/
 function buildPort(){
   const d=document.createElement("div");d.className="portada";
-  if(isURL(libro.portada)){d.append(Object.assign(new Image(),{src:libro.portada}));}
+  if(isURL(libro.portada)){d.append(Object.assign(new Image(),{src:libro.portada,loading:"lazy"}));}
   else{
     const box=document.createElement("div");box.className="port-text";
-    const [t,...rest]=libro.portada.split("\\n");
-    box.innerHTML=`<h2>${t}</h2><p>${rest.join(" ")}</p>`;d.append(box);
+    box.innerHTML=`<h2>${libro.titulo}</h2><p>${libro.autor}</p>`;
+    d.append(box);
   }
   return d;
 }
 
+/* ── Dibujar 4 bloques ──*/
 function render(){
   grid.innerHTML="";
   for(let i=0;i<4;i++){
     const card=document.createElement("div");card.className="block";card.dataset.i=i;card.style.background=grad(i);
-    const label=document.createElement("div");label.className="label";label.style.color=libro.textColors[i];label.textContent=`${emojis[i]} ${libro.palabras[i]}`;
-    const frase=document.createElement("div");frase.className="frase";frase.style.color=libro.textColors[i];frase.textContent=libro.frases[i];
+    const label=document.createElement("div");label.className="label";label.style.color=libro.textColors?.[i]||"#fff";label.textContent=`${emojis[i%emojis.length]} ${libro.palabras[i]}`;
+    const frase=document.createElement("div");frase.className="frase";frase.style.color=libro.textColors?.[i]||"#fff";frase.textContent=libro.frases[i];
     const port=buildPort();
     if(i===portIdx) card.append(port);
-    card.append(label,frase);card.onclick=()=>click(card,i,port);
+    card.append(label,frase);card.onclick=()=>click(card,i,port,label);
     grid.append(card);
   }
 }
 
-function click(card,i,port){
+/* ── Lógica de clic ──*/
+function click(card,i,port,labelRef){
   if(revealed&&i!==portIdx){location.reload();return;}
   if(i===portIdx&&!revealed){
+    /* quitar palabra para evitar encimarse */
+    labelRef.style.display="none";
     port.style.display="flex";
     [...grid.children].forEach((c,j)=>{if(j!==portIdx)c.classList.add("show");});
     cta.style.display="flex";revealed=true;
@@ -109,15 +125,20 @@ function click(card,i,port){
 }
 
 btnOtro.onclick=()=>location.reload();
+
+/* ── Botón "Abrí uno físico" ──*/
 btnLibro.onclick=async()=>{
   btnLibro.disabled=true;cele.style.display="flex";
   celeMsg.innerHTML='✨ <span class="num">...</span><br>libros físicos abiertos';
-  try{const r=await fetch("https://triggui-api.vercel.app/api/increment");const d=await r.json();
-      celeMsg.innerHTML=`✨ <span class="num">${d.total.toLocaleString('es-MX')}</span><br>libros físicos abiertos`; }
-  catch{celeMsg.textContent="📚 Error al contar libros";}
-  setTimeout(()=>{cele.style.display="none";cta.style.display="flex";},2300);
+  try{
+    const r=await fetch("https://triggui-api.vercel.app/api/increment");
+    const d=await r.json();
+    celeMsg.innerHTML=`✨ <span class="num">${d.total.toLocaleString('es-MX')}</span><br>libros físicos abiertos`;
+  }catch{celeMsg.textContent="📚 Error al contar libros";}
+  setTimeout(()=>{cele.style.display="none";cta.style.display="flex";btnLibro.disabled=false;},2300);
 };
 
+/* ── Cargar contenido remoto ──*/
 (async()=>{
   try{
     const r=await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json?ts="+Date.now());
