--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 </head>
 <body>
 
-<div class="intro"><span class="hl">¿QUE SIENTES?</span> Elige una palabra. Detente un segundo.</div>
+<div class="intro"><span class="hl">¿QUE SIENTES?</span></div>
 <div class="grid" id="grid"></div>
 
 <div class="cta" id="cta">
