--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,12 @@
 <title>Triggui — Abre un libro físico. Aquí y ahora.</title>
 <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins:wght@500;800&display=swap" rel="stylesheet"/>
 <style>
+/* ───────── RESET & CORE ───────── */
 *,*:before,*:after{margin:0;padding:0;box-sizing:border-box}
 html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:#fff;
           overflow-y:auto;-webkit-overflow-scrolling:touch;user-select:none}
 
-/* ───────── Intro───────── */
+/* ───────── INTRO ───────── */
 .intro{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);
        padding:1.8rem 2.8rem;background:#191e32;border-radius:24px;z-index:120;
        font-family:'Poppins';font-size:1rem;box-shadow:0 0 16px rgba(48,255,228,.32);
@@ -18,12 +19,12 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 .intro .hl{color:#30ffe4;font-weight:800}
 @keyframes introHide{to{opacity:0;visibility:hidden;transform:translate(-50%,-80%)}}
 
-/* ───────── Grid───────── */
+/* ───────── GRID ───────── */
 .grid{position:absolute;inset:5vh 1.5vw;display:grid;gap:1vw}
 @media(orientation:landscape){.grid{grid-template-columns:repeat(4,1fr)}}
 @media(orientation:portrait){.grid{grid-template-columns:repeat(2,1fr);grid-template-rows:repeat(2,1fr)}}
 
-/* ───────── Blocks───────── */
+/* ───────── BLOCKS ───────── */
 .block{position:relative;display:flex;align-items:center;justify-content:center;
        padding:1rem;border-radius:22px;font-weight:700;cursor:pointer;
        background-size:320% 320%;transition:background-position 4s;overflow:hidden}
@@ -38,26 +39,45 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 .block.show .label{opacity:0}
 .block.show .frase{opacity:1}
 
-/* ───────── Portada───────── */
+/* ───────── AURA AL REVELAR ───────── */
+@keyframes auraExpand{0%{transform:scale(.3);opacity:.8}100%{transform:scale(1.3);opacity:0}}
+.reveal-aura::after{
+  content:"";position:absolute;inset:0;border-radius:inherit;
+  background:var(--aura,rgba(255,255,255,.35));
+  animation:auraExpand .6s ease-out forwards;pointer-events:none
+}
+@media (prefers-reduced-motion: reduce){.reveal-aura::after{animation:none;opacity:0}}
+
+/* ───────── PORTADA ───────── */
 .portada{position:absolute;inset:0;display:none;align-items:center;justify-content:center;
-         flex-direction:column;padding:1rem;gap:.95rem;text-align:center;
+         flex-direction:column;padding:1rem;gap:1rem;text-align:center;
          animation:pop .6s ease-out forwards}
 @keyframes pop{0%{transform:scale(.8);opacity:0}100%{transform:scale(1);opacity:1}}
-.portada img{max-width:88%;max-height:72%;border-radius:18px;
+.portada img{max-width:88%;max-height:70%;border-radius:18px;
              box-shadow:0 12px 32px rgba(0,0,0,.55)}
-.emoji-big{font-size:clamp(2.6rem,7vw,4rem);filter:drop-shadow(0 4px 8px rgba(0,0,0,.3))}
-.port-text h2{font-size:clamp(1.9rem,5vw,3rem);font-weight:800;line-height:1.15;
-              text-shadow:0 2px 6px rgba(0,0,0,.35)}
-.port-text p{font-size:clamp(.85rem,2.4vw,1.15rem);font-weight:600;opacity:.9;margin-top:.25rem}
+.emoji-big{font-size:clamp(2.4rem,7vw,4rem);filter:drop-shadow(0 4px 8px rgba(0,0,0,.35));
+           animation:bounce .5s cubic-bezier(.34,1.56,.64,1)}
+@keyframes bounce{0%{transform:scale(.6) rotate(-6deg)}60%{transform:scale(1.15) rotate(6deg)}100%{transform:scale(1) rotate(0)}}
+.port-text h2{font-size:clamp(1.6rem,5.5vw,3rem);font-weight:800;line-height:1.15;
+              word-break:break-word;hyphens:auto;margin-inline:auto;max-width:90%;
+              background-image:var(--grad-text);
+              -webkit-background-clip:text;background-clip:text;color:transparent;
+              text-shadow:0 2px 6px rgba(0,0,0,.3)}
+.port-text p{font-size:clamp(.8rem,2.4vw,1.15rem);font-weight:600;opacity:.88;margin-top:.15rem}
 
-/* ───────── CTA───────── */
+/* fallback si el navegador no soporta background-clip */
+@supports not (-webkit-background-clip:text){
+  .port-text h2{color:#fff;background:none}
+}
+
+/* ───────── CTA ───────── */
 .cta{position:fixed;bottom:3vh;left:50%;transform:translateX(-50%);
      display:none;gap:1rem;z-index:100}
 .cta button{border:none;padding:.6rem 1.2rem;border-radius:999px;font-size:.9rem;font-weight:700;cursor:pointer}
 #otro{background:#ffd1d1;color:#000}
 #fisico{background:#d1ffd9;color:#000}
 
-/* ───────── Celebración───────── */
+/* ───────── CELEBRACIÓN ───────── */
 .cele{position:fixed;inset:0;background:rgba(0,0,0,.88);display:none;
       align-items:center;justify-content:center;z-index:110}
 .cele-msg{font-family:'Poppins';font-size:2rem;text-align:center;
@@ -67,7 +87,7 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 </head>
 <body>
 
-<div class="intro"><span class="hl">¿QUE SIENTES?</span></div>
+<div class="intro"><span class="hl">Elige una palabra.</span> Detente un segundo.</div>
 <div class="grid" id="grid"></div>
 
 <div class="cta" id="cta">
@@ -88,24 +108,36 @@ const emojis=["🌊","🛡️","🧠","✨","📘","🔮","❤️","🪞"];
 
 const grad=i=>`linear-gradient(135deg,${libro.colores[i]},${libro.colores[(i+1)%4]})`;
 
-/* ── Crear portada (imagen o título/autor) ──*/
+/* ───────── Ajuste dinámico de título largo ───────── */
+function fitTitle(el){
+  const maxH=120;                         /* altura máxima en px antes de escalar */
+  if(el.scrollHeight>maxH){
+    const scale=maxH/el.scrollHeight;
+    el.style.transform=`scale(${scale}) translateY(-${(1-scale)*50}%)`;
+    el.style.transformOrigin='top center';
+  }
+}
+
+/* ───────── Crear portada ───────── */
 function buildPort(idx){
   const d=document.createElement("div");d.className="portada";
-  /* gran emoji encabezando */
-  const bigEmoji=document.createElement("div");
-  bigEmoji.className="emoji-big";
+  const bigEmoji=document.createElement("div");bigEmoji.className="emoji-big";
   bigEmoji.textContent=emojis[idx%emojis.length];
+
   if(isURL(libro.portada)){
     d.append(bigEmoji,Object.assign(new Image(),{src:libro.portada,loading:"lazy"}));
   }else{
     const box=document.createElement("div");box.className="port-text";
-    box.innerHTML=`<h2>${libro.titulo}</h2><p>${libro.autor}</p>`;
+    /* gradiente de texto dinámico */
+    const gradText=`linear-gradient(90deg,${libro.colores[0]},${libro.colores[1]})`;
+    box.innerHTML=`<h2 style="--grad-text:${JSON.stringify(gradText)}">${libro.titulo}</h2><p>${libro.autor}</p>`;
     d.append(bigEmoji,box);
+    fitTitle(box.firstElementChild);
   }
   return d;
 }
 
-/* ── Dibujar 4 bloques ──*/
+/* ───────── Render ───────── */
 function render(){
   grid.innerHTML="";
   for(let i=0;i<4;i++){
@@ -114,18 +146,20 @@ function render(){
     const frase=document.createElement("div");frase.className="frase";frase.style.color=libro.textColors?.[i]||"#fff";frase.textContent=libro.frases[i];
     const port=buildPort(i);
     if(i===portIdx) card.append(port);
-    card.append(label,frase);card.onclick=()=>click(card,i,port,label);
+    card.append(label,frase);
+    card.onclick=()=>click(card,i,port,label);
     grid.append(card);
   }
 }
 
-/* ── Lógica de clic ──*/
+/* ───────── Interacciones ───────── */
 function click(card,i,port,labelRef){
   if(revealed&&i!==portIdx){location.reload();return;}
   if(i===portIdx&&!revealed){
-    /* quitar palabra para evitar encimarse */
-    labelRef.style.display="none";
+    labelRef.style.display="none";       /* quita la palabra para no empalmar */
     port.style.display="flex";
+    card.classList.add('reveal-aura');   /* halo emocional */
+    card.style.setProperty('--aura',libro.colores[i]); /* color aura */
     [...grid.children].forEach((c,j)=>{if(j!==portIdx)c.classList.add("show");});
     cta.style.display="flex";revealed=true;
   }else if(i!==portIdx&&!revealed){
@@ -135,7 +169,7 @@ function click(card,i,port,labelRef){
 
 btnOtro.onclick=()=>location.reload();
 
-/* ── Botón "Abrí uno físico" ──*/
+/* ───────── “Abrí uno físico” ───────── */
 btnLibro.onclick=async()=>{
   btnLibro.disabled=true;cele.style.display="flex";
   celeMsg.innerHTML='✨ <span class="num">...</span><br>libros físicos abiertos';
@@ -147,7 +181,7 @@ btnLibro.onclick=async()=>{
   setTimeout(()=>{cele.style.display="none";cta.style.display="flex";btnLibro.disabled=false;},2300);
 };
 
-/* ── Cargar contenido remoto ──*/
+/* ───────── Cargar contenido ───────── */
 (async()=>{
   try{
     const r=await fetch("https://raw.githubusercontent.com/badirnakid/triggui-content/main/contenido.json?ts="+Date.now());
