--- a/public/index.html
+++ b/public/index.html
@@ -39,33 +39,34 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 .block.show .label{opacity:0}
 .block.show .frase{opacity:1}
 
-/* ───────── AURA AL REVELAR ───────── */
+/* ───────── REVEAL AURA ───────── */
 @keyframes auraExpand{0%{transform:scale(.3);opacity:.8}100%{transform:scale(1.3);opacity:0}}
-.reveal-aura::after{
-  content:"";position:absolute;inset:0;border-radius:inherit;
-  background:var(--aura,rgba(255,255,255,.35));
-  animation:auraExpand .6s ease-out forwards;pointer-events:none
-}
-@media (prefers-reduced-motion: reduce){.reveal-aura::after{animation:none;opacity:0}}
+.reveal-aura::after{content:"";position:absolute;inset:0;border-radius:inherit;
+                    background:var(--aura,rgba(255,255,255,.35));animation:auraExpand .6s ease-out forwards;
+                    pointer-events:none}
+@media(prefers-reduced-motion:reduce){.reveal-aura::after{animation:none;opacity:0}}
 
 /* ───────── PORTADA ───────── */
 .portada{position:absolute;inset:0;display:none;align-items:center;justify-content:center;
          flex-direction:column;padding:1rem;gap:1rem;text-align:center;
          animation:pop .6s ease-out forwards}
 @keyframes pop{0%{transform:scale(.8);opacity:0}100%{transform:scale(1);opacity:1}}
-.portada img{max-width:88%;max-height:70%;border-radius:18px;
-             box-shadow:0 12px 32px rgba(0,0,0,.55)}
+.portada img{max-width:88%;max-height:70%;border-radius:18px;box-shadow:0 12px 32px rgba(0,0,0,.55)}
 .emoji-big{font-size:clamp(2.4rem,7vw,4rem);filter:drop-shadow(0 4px 8px rgba(0,0,0,.35));
            animation:bounce .5s cubic-bezier(.34,1.56,.64,1)}
 @keyframes bounce{0%{transform:scale(.6) rotate(-6deg)}60%{transform:scale(1.15) rotate(6deg)}100%{transform:scale(1) rotate(0)}}
-.port-text h2{font-size:clamp(1.6rem,5.5vw,3rem);font-weight:800;line-height:1.15;
-              word-break:break-word;hyphens:auto;margin-inline:auto;max-width:90%;
-              background-image:var(--grad-text);
-              -webkit-background-clip:text;background-clip:text;color:transparent;
-              text-shadow:0 2px 6px rgba(0,0,0,.3)}
-.port-text p{font-size:clamp(.8rem,2.4vw,1.15rem);font-weight:600;opacity:.88;margin-top:.15rem}
 
-/* fallback si el navegador no soporta background-clip */
+.port-text h2{
+  font-size:clamp(1.6rem,5.5vw,3rem);font-weight:800;line-height:1.15;
+  margin-inline:auto;max-width:90%;white-space:nowrap;   /* mantén palabra entera */
+  overflow:hidden;text-overflow:ellipsis;                /* por si excede mucho */
+  text-rendering:geometricPrecision;-webkit-font-smoothing:antialiased;
+  background-image:var(--grad-text);-webkit-background-clip:text;background-clip:text;color:transparent;
+  text-shadow:0 1px 3px rgba(0,0,0,.25)
+}
+.port-text p{font-size:clamp(.8rem,2.4vw,1.15rem);font-weight:600;opacity:.88;margin-top:.2rem}
+
+/* Fallback si no hay background-clip */
 @supports not (-webkit-background-clip:text){
   .port-text h2{color:#fff;background:none}
 }
@@ -74,10 +75,9 @@ html,body{height:100%;font-family:'Archivo',sans-serif;background:#0e0f1b;color:
 .cta{position:fixed;bottom:3vh;left:50%;transform:translateX(-50%);
      display:none;gap:1rem;z-index:100}
 .cta button{border:none;padding:.6rem 1.2rem;border-radius:999px;font-size:.9rem;font-weight:700;cursor:pointer}
-#otro{background:#ffd1d1;color:#000}
-#fisico{background:#d1ffd9;color:#000}
+#otro{background:#ffd1d1;color:#000}#fisico{background:#d1ffd9;color:#000}
 
-/* ───────── CELEBRACIÓN ───────── */
+/* ───────── CELE ───────── */
 .cele{position:fixed;inset:0;background:rgba(0,0,0,.88);display:none;
       align-items:center;justify-content:center;z-index:110}
 .cele-msg{font-family:'Poppins';font-size:2rem;text-align:center;
@@ -105,20 +105,21 @@ const grid=document.getElementById("grid"),cta=document.getElementById("cta"),
 let libro=null;const portIdx=Math.floor(Math.random()*4);let revealed=false;
 const isURL=s=>/^https?:\/\//i.test(s||"");
 const emojis=["🌊","🛡️","🧠","✨","📘","🔮","❤️","🪞"];
-
 const grad=i=>`linear-gradient(135deg,${libro.colores[i]},${libro.colores[(i+1)%4]})`;
 
-/* ───────── Ajuste dinámico de título largo ───────── */
-function fitTitle(el){
-  const maxH=120;                         /* altura máxima en px antes de escalar */
-  if(el.scrollHeight>maxH){
-    const scale=maxH/el.scrollHeight;
-    el.style.transform=`scale(${scale}) translateY(-${(1-scale)*50}%)`;
-    el.style.transformOrigin='top center';
+/* ───────── Escalado inteligente ───────── */
+function fitTitle(h2,box){
+  /* mide exceso en ancho/alto, escala si hace falta */
+  const wScale=box.clientWidth/(h2.scrollWidth+1);
+  const hScale=120/(h2.scrollHeight+1);          /* 120px alto “ideal” */
+  const scale=Math.min(wScale,hScale,1);
+  if(scale<1){
+    h2.style.transform=`scale(${scale})`;
+    h2.style.transformOrigin='top center';
   }
 }
 
-/* ───────── Crear portada ───────── */
+/* ───────── Portada ───────── */
 function buildPort(idx){
   const d=document.createElement("div");d.className="portada";
   const bigEmoji=document.createElement("div");bigEmoji.className="emoji-big";
@@ -128,11 +129,10 @@ function buildPort(idx){
     d.append(bigEmoji,Object.assign(new Image(),{src:libro.portada,loading:"lazy"}));
   }else{
     const box=document.createElement("div");box.className="port-text";
-    /* gradiente de texto dinámico */
     const gradText=`linear-gradient(90deg,${libro.colores[0]},${libro.colores[1]})`;
     box.innerHTML=`<h2 style="--grad-text:${JSON.stringify(gradText)}">${libro.titulo}</h2><p>${libro.autor}</p>`;
     d.append(bigEmoji,box);
-    fitTitle(box.firstElementChild);
+    fitTitle(box.firstElementChild,box);
   }
   return d;
 }
@@ -141,9 +141,15 @@ function buildPort(idx){
 function render(){
   grid.innerHTML="";
   for(let i=0;i<4;i++){
-    const card=document.createElement("div");card.className="block";card.dataset.i=i;card.style.background=grad(i);
-    const label=document.createElement("div");label.className="label";label.style.color=libro.textColors?.[i]||"#fff";label.textContent=`${emojis[i%emojis.length]} ${libro.palabras[i]}`;
-    const frase=document.createElement("div");frase.className="frase";frase.style.color=libro.textColors?.[i]||"#fff";frase.textContent=libro.frases[i];
+    const card=document.createElement("div");
+    card.className="block";card.dataset.i=i;card.style.background=grad(i);
+    const label=document.createElement("div");
+    label.className="label";label.style.color=libro.textColors?.[i]||"#fff";
+    label.textContent=`${emojis[i%emojis.length]} ${libro.palabras[i]}`;
+    const frase=document.createElement("div");
+    frase.className="frase";frase.style.color=libro.textColors?.[i]||"#fff";
+    frase.textContent=libro.frases[i];
+
     const port=buildPort(i);
     if(i===portIdx) card.append(port);
     card.append(label,frase);
@@ -156,10 +162,10 @@ function render(){
 function click(card,i,port,labelRef){
   if(revealed&&i!==portIdx){location.reload();return;}
   if(i===portIdx&&!revealed){
-    labelRef.style.display="none";       /* quita la palabra para no empalmar */
+    labelRef.style.display="none";
     port.style.display="flex";
-    card.classList.add('reveal-aura');   /* halo emocional */
-    card.style.setProperty('--aura',libro.colores[i]); /* color aura */
+    card.classList.add('reveal-aura');
+    card.style.setProperty('--aura',libro.colores[i]);
     [...grid.children].forEach((c,j)=>{if(j!==portIdx)c.classList.add("show");});
     cta.style.display="flex";revealed=true;
   }else if(i!==portIdx&&!revealed){
